--- a/.github/workflows/github-actions-vercel.yml
+++ b/.github/workflows/github-actions-vercel.yml
@@ -20,9 +20,11 @@ jobs:
           node-version: '23'
       
       - name: Install Dependencies
+        working-directory: ./frontend
         run: npm install
       
       - name: Build Project
+        working-directory: ./frontend
         run: npm run build
       
       - name: Deploy to Vercel
