--- a/.github/workflows/github-actions-vercel.yml
+++ b/.github/workflows/github-actions-vercel.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{secrets.VERCEL_TOKEN}}
-        run: npx vercel --prod --token $VERCEL_TOKEN --yes
+        run: npx vercel --prod --token $VERCEL_TOKEN --yes --cwd frontend
