--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for backend-summer-dew-9711 on 2025-04-19T23:15:32Z
+# fly.toml app configuration file generated for blbjzl-accountability-application-backend on 2025-04-20T00:26:11Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'backend-summer-dew-9711'
-primary_region = 'cdg'
+app = 'blbjzl-accountability-application-backend'
+primary_region = 'waw'
 
 [build]
 
@@ -20,3 +20,4 @@ primary_region = 'cdg'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
